assets/stylesheets/source/main.scss
$medium-breakpoint: 1440px;
$small-breakpoint: 768px;

@mixin custom-scrollbar($size, $foreground-color, $background-color: mix($foreground-color, white,  50%)) {
    // For Webkit browsers
    &::-webkit-scrollbar {
        width: $size;
        height: 100%;
    }
  
    &::-webkit-scrollbar-thumb {
        background: $foreground-color;

        &:hover {
            background: scale-color($foreground-color, $lightness: -15%);
        }

        &:active {
            background: scale-color($foreground-color, $lightness: -30%);
        }
    }
  
    &::-webkit-scrollbar-track {
        background: $background-color;
    }
  
    // For Internet Explorer
    scrollbar-face-color: $foreground-color;
    scrollbar-track-color: $background-color;
}

@mixin font-size($size) {
    font-size: calc(#{$size} * var(--width-ratio));
}

@keyframes picture-fly-in {
    from { transform: translateY(90vh); }
    to { transform: translateY(0); }
}

@keyframes profile-fly-in {
    from { transform: translateX(60vw); }
    to { transform:translateX(0); }
}

@keyframes arrow-fly-in {
    from { transform: translateY(20vh); }
    to { transform: translateY(0); }
}

@keyframes arrow-bounce {
    0%, 50%, 62%, 88%, 100% { transform: translateY(0) rotate(45deg); }
    75% { transform: translateY(10px) rotate(45deg); }
}

@keyframes text-flip {
    0% { transform: rotateY(0deg); }
    16%, 100% { transform: rotateY(360deg); }
}

:root {
    --main-background-color: #003262;
    --main-background-color-dark: #001631;
    --main-text-color-rgb: 255, 255, 255;
    --main-text-color: rgb(var(--main-text-color-rgb));
    --main-background-gradient: linear-gradient(30deg, #003262, #004893);
    --alt-background-color: #d7cb84;
    --alt-text-color-rgb: 0, 50, 98;
    --alt-text-color: rgb(var(--alt-text-color-rgb));
    --box-shadow: 0 5px 15px black;
    --fly-in-duration: 0.6s;
    --fly-in-timing-function: cubic-bezier(0.27, 0.57, 0.54, 1.02);
    --width-ratio: 1;
    --height-ratio: 1;
    --width-0: 0;
    --width-1: 0;
    --width-2: 0;
    --width-3: 0;
    --theme-text-color: white;
}

:root.dark-theme {
    --main-background-color: black;
    --main-background-color-dark: black;
    --main-text-color-rgb: 255, 255, 255;
    --main-background-gradient: black;
    --alt-background-color: #1d2020;
    --alt-text-color-rgb: 255, 255, 255;
    --box-shadow: 0 0 2px white;
}

* {
    box-sizing: border-box;
    font-family: Lato, Helvetica, Verdana, Tahoma, sans-serif;
    letter-spacing: 0.03em;
    line-height: 1.2em;
}

html {
    @include font-size(100%);
}

html, body {
    padding: 0;
    margin: 0;
    scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
    @include custom-scrollbar(0.8%, #9e9ebe, mix(#9e9e9e, white, 50%));
}

.title-xs {
    @include font-size(1.3rem);
}

.title-small {
    @include font-size(1.8rem);
}

.title-medium {
    @include font-size(3rem);
}

.title-large {
    @include font-size(4rem);
}

.text-small {
    @include font-size(1.1rem);
}

.text-medium {
    @include font-size(1.4rem);
}

.text-large {
    @include font-size(1.7rem);
}

.small-caps {
    font-variant: small-caps;
}

.alt-color {
    color: var(--alt-text-color);
}

.profile {
    width: 100%;
    height: 100vh;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    align-items: center;
    align-content: stretch;
    overflow: hidden;
    background: var(--main-background-gradient);
    color: var(--main-text-color);
}

.profile-picture {
    border-radius: 50%;
    box-shadow: 0 0 10px black;
    border: 1.5px solid var(--main-text-color);
}

.profile-picture-container {
    flex: 4 4 40%;
    height: auto;
    padding: 4%;
    margin: 0;

    .profile-picture {
        width: 70%;
        height: auto;
        margin-left: 20%;
        animation: picture-fly-in var(--fly-in-duration) var(--fly-in-timing-function);
    }
}

.profile-description {
    flex: 6 6 60%;
    height: auto;
    padding: 4%;
    padding-right: 10%;
    margin: auto;
    font-size: 20px;
    animation: profile-fly-in var(--fly-in-duration) var(--fly-in-timing-function);
}

.icons {
    display: flex;
    justify-content: flex-start;

    a {
        color: var(--main-text-color);
        transition: color 0.5s;
        margin-right: 5%;
        text-decoration: none;

        .icon {
            color: var(--main-text-color);
            height: 3.5em;
            width: 3.5em;
            border-radius: 50%;
            border: 1px solid var(--main-text-color);

            &:hover {
                cursor: pointer;
                border: 2px solid var(--main-text-color);
            }

        }

        &:focus {
            outline: none;

            .icon {
                border: 2px solid var(--main-text-color);
            }
        }
    }
}

i {
    color: var(--main-text-color);
}

.down-arrow {
    flex: 0 0 100%;
    height: auto;
    text-align: center;
    align-self: flex-end;
    margin-bottom: 50px;
    animation: arrow-fly-in var(--fly-in-duration) var(--fly-in-timing-function);

    a:focus {
        outline:none;

        .arrow {
            border-width: 0 3.5px 3.5px 0;
        }
    }
}

.arrow {
    width: 2vw;
    height: 2vw;
    border-width: 0 2px 2px 0;
    border-style: solid;
    border-color: var(--main-text-color);
    transform: rotate(45deg);
    animation: arrow-bounce 4s 1s infinite;

    &:hover {
        border-width: 0 3.5px 3.5px 0;
        cursor: pointer;
    }
}

.portfolio-menu {
    width: 100%;
    height: auto;
    margin: 0;
    padding: 0;
    box-shadow: 1px 0 2px var(--alt-text-color);
    position: fixed;
    top: 0;
    left: 0;
    background: var(--main-background-color-dark);
    z-index: 5;
}
/* ... */

